Fixed alignment bugs on entry meta (#56019055403574)

--- a/assets/css/_modules.scss
+++ b/assets/css/_modules.scss
@@ -696,14 +696,14 @@
 
 		@include bp(xl) {
 			float: none;
-			margin: 0;
+			margin: 0 0 $baseline 0;
 		}
 	}
 
 	.author-name {
 		display: inline-block;
 		@include font-size($fontsize200);
-		line-height: 1.5rem;
+		line-height: 1.15rem;
 		font-weight: 700;
 		color: $black900;
 
